# genderbench

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  Untitled-1.ipynb  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
docs/: copy_probe_readmes.py  requirements.txt
docs/source/: api.rst  conf.py  developing_probes.rst  index.rst  probe_cards.rst  probe_meta_documentation.rst  probes.rst  quickstart.md  quickstart.rst  reports.rst
docs/source/api/: gender_bench.generators.generator.Generator.rst  gender_bench.probing.attempt.Attempt.rst  gender_bench.probing.harness.Harness.rst  gender_bench.probing.mark_definition.MarkDefinition.rst  gender_bench.probing.probe_item.ProbeItem.rst  gender_bench.probing.prompt.Prompt.rst  genderbench.generators.generator.Generator.rst  genderbench.probing.attempt.Attempt.rst  genderbench.probing.evaluator.Evaluator.rst  genderbench.probing.harness.Harness.rst
docs/source/probes/: bbq.rst  business_vocabulary.rst  direct.rst  discrimination_tamkin.rst  diversity_med_qa.rst  diversitymedqa.rst  dreaddit.rst  gest.rst  gest_creative.rst  gest_translation.rst  hiring_an.rst  hiring_bloomberg.rst  inventories.rst  isear.rst  jobs_lum.rst  machine_translation.rst  (+1 more)
genderbench/harnesses/: default.py
genderbench/probes/: __init__.py
genderbench/probing/: probe.py
genderbench/report_generation/: canvas.html  main.html  report.py
reports/: gender_bench_report_0_1.html
scripts/: estimating_num_repetitions.py
src/gender_bench/: config.py
tests/: test_probes.py
(+168 files in other folders)
